--- a/src/styles/scss/partials/_post.scss
+++ b/src/styles/scss/partials/_post.scss
@@ -77,7 +77,21 @@ $comments-indentation: 10px;
 
 .post__comments-container {
   overflow: hidden;
+}
+
+.post__comments__tree {
+  overflow: hidden;
   padding-right: $comments-indentation;
+}
+
+.post__comments__loading {
+  height: 3em;
+  background-color: #212022;
+  display: flex;
+  @include justify-content(center);
+  @include align-items(center);
+  color: gray;
+  font-weight: bold;
 }
 
 .post__comments__root {
