--- a/src/templates/subreddit/post.hbs
+++ b/src/templates/subreddit/post.hbs
@@ -11,8 +11,9 @@
             </a>
         </h1>
         <h1 class="post__title-bar__stats">
-            <span class="post__title-bar__up">{{post.ups}}</span>
-            <span class="post__title-bar__down">{{post.downs}}</span>
+            <span class="post__title-bar__score">{{post.score}}</span>
+            <span class="post__title-bar__up">&#9650;</span>
+            <span class="post__title-bar__down">&#9660;</span>
             <a class="post__title-bar__link" target="_blank" {{bind-attr href=post.redditLink}}>&#10132;</a>
         </h1>
     </div>
