--- a/src/styles/scss/partials/_feed-tile.scss
+++ b/src/styles/scss/partials/_feed-tile.scss
@@ -31,7 +31,7 @@
 // feed grid
 
 .subreddit__grid-tile {
-
+  @include box-shadow(0px 0px 5px 2px rgba(0, 0, 0, 0.5));
   overflow: hidden;
   width: 400px;
   background-color: #3F3D3F;
