--- a/src/templates/sidebar.hbs
+++ b/src/templates/sidebar.hbs
@@ -19,7 +19,7 @@
 </div>
 
 {{#if account.isLoggedIn}}
-
+    You are logged in
 {{else}}
     <div class="sidebar__login-container">
         {{#if account.popup}}
