--- a/src/templates/sidebar.hbs
+++ b/src/templates/sidebar.hbs
@@ -18,19 +18,38 @@
 
 </div>
 
-{{#if account.isLoggedIn}}
-    You are logged in
-{{else}}
-    <div class="sidebar__login-container">
-        {{#if account.popup}}
-            <div class="sidebar__login__popup">
-                <h1>Please finish login in the pupup window</h1>
-                <div {{action "closePopup" target=account}}>Cancel</div>
+<div class="sidebar__account-container">
+
+    {{#if account.model}}
+        <div id="sidebar__account__profile" class="sidebar__account">
+            <h1>{{account.name}}</h1>
+            <div {{action "logout" target=account}}>&#10060;</div>
+        </div>
+    {{else}}
+        {{#if account.isFetchingProfile}}
+            <div id="sidebar__account__fetching" class="sidebar__account">
+                <h1>Fetching your profile</h1>
             </div>
         {{else}}
-            <div class="sidebar__login__before" {{action "loginPopup" target=account}}>
-                Login
-            </div>
+            {{#if account.isFetchingToken}}
+                <div id="sidebar__account__fetching" class="sidebar__account">
+                    <h1>Fetching Reddit API credentials</h1>
+                </div>
+            {{else}}
+                {{#if account.popup}}
+                    <div id="sidebar__account__popup" class="sidebar__account">
+                        <h1>Please finish login in the pupup window</h1>
+                        <div {{action "closePopup" target=account}}>&#10060;</div>
+                    </div>
+                {{else}}
+                    <div id="sidebar__account__login" class="sidebar__account">
+                        <h1>You are not logged in</h1>
+                        <div {{action "loginPopup" target=account}}>&#10132;</div>
+                    </div>
+                {{/if}}
+            {{/if}}
         {{/if}}
-    </div>
-{{/if}}
+    {{/if}}
+
+</div>
+
