--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -15,5 +15,6 @@ a, a:link, a:hover, a:visited, a:active {
 @import "partials/welcome";
 @import "partials/sidebar";
 @import "partials/subreddit";
+@import "partials/profile";
 @import "partials/feed-tile";
 @import "partials/post";
