begin to adapt to components instead of views

--- a/src/templates/subreddit.hbs
+++ b/src/templates/subreddit.hbs
@@ -30,15 +30,7 @@
 
             <div class="subreddit__grid-container">
 
-                {{#view "feedGrid" controller=controllers.stream}}
-
-                    {{#each feed in this}}
-
-                        {{view "feedTile" controller=feed}}
-
-                    {{/each}}
-
-                {{/view}}
+                {{feed-grid stream=controllers.stream}}
 
             </div>
 
