--- a/src/templates/subreddit.hbs
+++ b/src/templates/subreddit.hbs
@@ -22,60 +22,64 @@
 
 </div>
 
-<div {{bind-attr class=":subreddit__container isFull::not-full"}}>
+<div class="subreddit__container">
 
-    <div {{bind-attr class=":subreddit__feeds-container isFull::not-full"}}>
+    <div {{bind-attr class=":subreddit__body isFull::not-full"}}>
 
-        {{#if isFull}}
+        <div {{bind-attr class=":subreddit__feeds-container isFull::not-full"}}>
 
-            <div class="subreddit__grid-container">
+            {{#if isFull}}
 
-                {{feed-grid stream=controllers.stream}}
+                <div class="subreddit__grid-container">
 
-            </div>
+                    {{feed-grid stream=controllers.stream}}
 
-        {{else}}
+                </div>
 
-            <div class="subreddit__feed-list-container">
-                <ul>
-                    {{#each feed in controllers.stream}}
-
-                        {{#link-to "subreddit.post" feed.id}}
-
-                            <li {{bind-attr class=":subreddit__feed-list__item feed.isCurrent"}}>
-
-                                {{#if feed.hasThumbnail}}
-                                    <div class="feed-list__item__thumbnail" {{bind-attr style=feed.backgroundStyle}}>
-                                        <h1>{{feed.score}}</h1>
-                                    </div>
-                                {{else}}
-                                    <div class="feed-list__item__thumbnail">
-                                        <h1>{{feed.score}}</h1>
-                                    </div>
-                                {{/if}}
-
-                                <div class="feed-list__item__title">{{feed.title}}</div>
-
-                            </li>
-
-                        {{/link-to}}
-
-                    {{/each}}
-                </ul>
-            </div>
-
-        {{/if}}
-
-        <div class="subreddit__load" {{action "loadMore"}}>
-            {{#if controllers.stream.isLoading}}
-                Loading...
             {{else}}
-                Load More
+
+                <div class="subreddit__feed-list-container">
+                    <ul>
+                        {{#each feed in controllers.stream}}
+
+                            {{#link-to "subreddit.post" feed.id}}
+
+                                <li {{bind-attr class=":subreddit__feed-list__item feed.isCurrent"}}>
+
+                                    {{#if feed.hasThumbnail}}
+                                        <div class="feed-list__item__thumbnail" {{bind-attr style=feed.backgroundStyle}}>
+                                            <h1>{{feed.score}}</h1>
+                                        </div>
+                                    {{else}}
+                                        <div class="feed-list__item__thumbnail">
+                                            <h1>{{feed.score}}</h1>
+                                        </div>
+                                    {{/if}}
+
+                                    <div class="feed-list__item__title">{{feed.title}}</div>
+
+                                </li>
+
+                            {{/link-to}}
+
+                        {{/each}}
+                    </ul>
+                </div>
+
             {{/if}}
+
+            <div class="subreddit__load" {{action "loadMore"}}>
+                {{#if controllers.stream.isLoading}}
+                    Loading...
+                {{else}}
+                    Load More
+                {{/if}}
+            </div>
+
         </div>
 
-    </div>
+        {{outlet}}
 
-    {{outlet}}
+    </div>
 
 </div>
