--- a/src/templates/subreddit.hbs
+++ b/src/templates/subreddit.hbs
@@ -15,31 +15,7 @@
             {{else}}
 
                 <div class="subreddit__feed-list-container">
-                    <ul>
-                        {{#each feed in controllers.stream}}
-
-                            {{#link-to "subreddit.post" feed.id}}
-
-                                <li {{bind-attr class=":subreddit__feed-list__item feed.isCurrent"}}>
-
-                                    {{#if feed.hasThumbnail}}
-                                        <div class="feed-list__item__thumbnail" {{bind-attr style=feed.backgroundStyle}}>
-                                            <h1>{{feed.score}}</h1>
-                                        </div>
-                                    {{else}}
-                                        <div class="feed-list__item__thumbnail">
-                                            <h1>{{feed.score}}</h1>
-                                        </div>
-                                    {{/if}}
-
-                                    <div class="feed-list__item__title">{{feed.title}}</div>
-
-                                </li>
-
-                            {{/link-to}}
-
-                        {{/each}}
-                    </ul>
+                    {{feed-list stream=controllers.stream}}
                 </div>
 
             {{/if}}
