--- a/src/styles/scss/partials/_subreddit.scss
+++ b/src/styles/scss/partials/_subreddit.scss
@@ -207,7 +207,7 @@ $feed-list-gap: 8px;
 
 .subreddit__load {
   font-size: $navbar-height/3;
-  height: 5%;
+  height: 3em;
   width: 100%;
   cursor: pointer;
   text-align: center;
