--- a/src/templates/components/subreddit-window.hbs
+++ b/src/templates/components/subreddit-window.hbs
@@ -9,7 +9,7 @@
     </div>
 
     <ul class="subreddit__navbar__order-switcher">
-        {{#each order in subreddit.orders}}
+        {{#each order in orders}}
             {{subreddit-order-tab order=order subreddit=subreddit}}
         {{/each}}
     </ul>
