--- a/src/templates/subreddit/post.hbs
+++ b/src/templates/subreddit/post.hbs
@@ -1,35 +1,1 @@
-<div class="subreddit__post-container">
-
-    {{#if post.hasFull}}
-        <img {{bind-attr src=post.url}}>
-    {{/if}}
-
-    <div class="post__title-bar">
-        <h1 class="post__title-bar__title">
-            <a target="_blank" {{bind-attr href=post.url}}>
-                {{post.title}}
-            </a>
-        </h1>
-        <h1 class="post__title-bar__stats">
-            <span class="post__title-bar__score">{{post.score}}</span>
-            <span class="post__title-bar__up">&#9650;</span>
-            <span class="post__title-bar__down">&#9660;</span>
-            <a class="post__title-bar__link" target="_blank" {{bind-attr href=post.redditLink}}>&#10132;</a>
-        </h1>
-    </div>
-
-    <div class="post__comments-container">
-        {{#if isLoadingComments}}
-            <div class="post__comments__loading">Loading Comments...</div>
-        {{else}}
-            {{#if comments}}
-                <div class="post__comments__tree">
-                    {{comment-Tree comments=comments}}
-                </div>
-            {{else}}
-                <div class="post__comments__loading">No Comment Yet</div>
-            {{/if}}
-        {{/if}}
-    </div>
-
-</div>
+{{link-detail link=model subreddit=subreddit backend=backend}}
