--- a/src/templates/components/feed-list.hbs
+++ b/src/templates/components/feed-list.hbs
@@ -1,10 +1,6 @@
 {{#each feed in stream}}
 
-    {{#link-to "subreddit.post" feed.id}}
-
-        {{feed-list-item feed=feed}}
-
-    {{/link-to}}
+    {{feed-list-item feed=feed enter="enter"}}
 
 {{/each}}
 
