--- a/src/templates/subreddit.hbs
+++ b/src/templates/subreddit.hbs
@@ -11,7 +11,7 @@
         <div class="dual-panel__container">
 
             <div class="dual-panel__feed-list-container">
-                {{feed-list subreddit=subreddit}}
+                {{feed-list subreddit=subreddit enter="enter"}}
             </div>
 
             <div class="dual-panel__post-container">
