--- a/src/styles/scss/partials/_subreddit.scss
+++ b/src/styles/scss/partials/_subreddit.scss
@@ -13,9 +13,6 @@ $navbar-height: 4em;
   right: 0;
   left: 15em;
 
-  padding-top: $navbar-height+1em;
-  padding-left: 0.5em;
-  padding-right: 0.5em;
   background-color: #2C2B2C;
 
   &.is-fullscreen {
@@ -237,4 +234,10 @@ $feed-list-width: 25em;
   font-weight: bold;
   color: gray;
   text-transform: uppercase;
+}
+
+.stream-container {
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
 }
