--- a/src/templates/components/feed-tile.hbs
+++ b/src/templates/components/feed-tile.hbs
@@ -6,13 +6,14 @@
     <span>{{feed.author}}</span>
     <a target="_blank" href="{{feed.redditLink}}">Comments</a>
     <a {{action "enter"}}>Enter</a>
-    {{#if savePending}}
-        <span>Saving</span>
-    {{else if feed.saved}}
-        <a {{action "toggleSave"}}>Unsave</a>
-    {{else}}
-        <a {{action "toggleSave"}}>Save</a>
-    {{/if}}
+
+    <span class="feed-tile__save {{if savePending "is-pending"}}" {{action "toggleSave"}}>
+        {{#if feed.saved}}
+            &#9733;
+        {{else}}
+            &#9734;
+        {{/if}}
+    </span>
 
 </h1>
 
