--- a/src/styles/scss/components/_feed-tile.scss
+++ b/src/styles/scss/components/_feed-tile.scss
@@ -1,3 +1,5 @@
+@import "compass";
+
 .feed-tile__save {
   color: gold !important;
 
@@ -5,4 +7,72 @@
     color: whitesmoke !important;
   }
 
+}
+
+$status-item-size: 60px;
+
+.feed-tile__status-bar {
+  display: flex;
+  @include flex-direction(row);
+  height: $status-item-size;
+
+  span {
+    color: white;
+  }
+
+}
+
+.feed-tile__status-bar__item {
+  @include flex(0 0 $status-item-size);
+  background-color: blue;
+  cursor: pointer;
+
+  span, a {
+    font-size: 2em;
+  }
+
+  &.feed-save {
+    background-color: rgb(142, 142, 65);
+  }
+
+  &.feed-upvote {
+    background-color: rgb(74, 142, 74);
+    span.is-upvoted { color: greenyellow; }
+  }
+
+  &.feed-downvote {
+    background-color: rgb(166, 59, 59);
+    //span { color: red; }
+  }
+
+  &.feed-link {
+    background-color: rgb(87, 87, 87);
+    a { color: white; }
+  }
+
+  &.feed-enter {
+    background-color: rgb(231, 231, 231);
+    span { color: gray; }
+  }
+
+}
+
+
+.feed-tile__status-bar__fill {
+  @include flex(1 0 0);
+  background-color: gray;
+
+  span {
+    color: white;
+    font-size: 2em;
+    font-weight: bold;
+  }
+
+}
+
+.feed-tile__status-bar__item, .feed-tile__status-bar__fill {
+  height: 100%;
+  display: flex;
+  @include justify-content(center);
+  @include align-items(center);
 }
