--- a/src/templates/components/feed-tile.hbs
+++ b/src/templates/components/feed-tile.hbs
@@ -2,19 +2,43 @@
     {{image-thumbnail feed=feed}}
 {{/if}}
 
+<div class="feed-tile__status-bar">
+
+    <div class="feed-tile__status-bar__fill feed-score">
+        <span>{{feed.score}}</span>
+    </div>
+
+    <div class="feed-tile__status-bar__item feed-upvote">
+        <span class="{{if feed.likes "is-upvoted"}}">&#9650;</span>
+    </div>
+
+    <div class="feed-tile__status-bar__item feed-downvote">
+        <span>&#9660;</span>
+    </div>
+
+    <div class="feed-tile__status-bar__item feed-save">
+        <span class="feed-tile__save {{if savePending "is-pending"}}" {{action "toggleSave"}}>
+            {{#if feed.saved}}
+                &#9733;
+            {{else}}
+                &#9734;
+            {{/if}}
+        </span>
+    </div>
+
+    <div class="feed-tile__status-bar__item feed-link">
+        <a target="_blank" href="{{feed.redditLink}}">r</a>
+    </div>
+
+    <div class="feed-tile__status-bar__item feed-enter" {{action "enter"}}>
+        <span>&#10132;</span>
+    </div>
+
+</div>
+
+
 <h1 class="grid-tile__metadata">
     <span>{{feed.author}}</span>
-    <a target="_blank" href="{{feed.redditLink}}">Comments</a>
-    <a {{action "enter"}}>Enter</a>
-
-    <span class="feed-tile__save {{if savePending "is-pending"}}" {{action "toggleSave"}}>
-        {{#if feed.saved}}
-            &#9733;
-        {{else}}
-            &#9734;
-        {{/if}}
-    </span>
-
 </h1>
 
 <h1 class="grid-tile__title-bar">
