--- a/src/templates/application.hbs
+++ b/src/templates/application.hbs
@@ -22,9 +22,9 @@
 
     <div class="sidebar__account-container">
 
-        {{#if account.model}}
+        {{#if account.profile}}
             <div id="sidebar__account__profile" class="sidebar__account">
-                <h1>{{account.name}}</h1>
+                <h1>{{account.profile.name}}</h1>
                 <div {{action "logout" target=account}}>&#10060;</div>
             </div>
             <div class="sidebar__profile-container">
