mine post added

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -21,3 +21,4 @@ a, a:link, a:hover, a:visited, a:active {
 @import "partials/profile";
 @import "partials/feed-tile";
 @import "partials/post";
+@import "partials/mine";
