--- a/src/templates/mine.hbs
+++ b/src/templates/mine.hbs
@@ -1,3 +1,5 @@
 <div class="stream-container">
-    {{feed-grid listing=listing}}
+    {{feed-grid listing=listing enter="enter"}}
 </div>
+
+{{outlet}}
