expansion window added

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -2,6 +2,7 @@
 @import "compass";
 @import "./components/feed-tile";
 @import "./components/link-detail";
+@import "./components/expansion-window";
 
 
 html, body {
