--- a/src/templates/application.hbs
+++ b/src/templates/application.hbs
@@ -3,7 +3,7 @@
     <div class="sidebar__search">
 
         <div class="sidebar__search__input-container">
-            {{input valueBinding="search.keyword" placeholder="Search..."}}
+            {{input value=search.keyword placeholder="Search..."}}
         </div>
 
         <div class="sidebar__search__candidates-container">
