--- a/src/templates/mine/post.hbs
+++ b/src/templates/mine/post.hbs
@@ -1,3 +1,3 @@
-<div class="mine__post-container">
+{{#expansion-window close="close"}}
     {{link-detail link=model}}
-</div>
+{{/expansion-window}}
