--- a/src/templates/subreddit/post.hbs
+++ b/src/templates/subreddit/post.hbs
@@ -1,1 +1,3 @@
-{{link-detail link=model subreddit=subreddit backend=backend}}
+{{#expansion-window close="close"}}
+    {{link-detail link=model}}
+{{/expansion-window}}
