--- a/src/templates/mine.hbs
+++ b/src/templates/mine.hbs
@@ -2,4 +2,6 @@
     {{feed-grid listing=listing enter="enter"}}
 </div>
 
+<div class="mine__fullscreen-toggle" {{action "toggleFullscreen"}}>&#9776;</div>
+
 {{outlet}}
