--- a/src/styles/scss/components/_expansion-window.scss
+++ b/src/styles/scss/components/_expansion-window.scss
@@ -6,7 +6,14 @@
   bottom: 0;
   right: 0;
   width: 70%;
+  @include animation(getin 0.5s);
   @include box-shadow(0 0 20px 3px black);
+
+  @include keyframes(getin) {
+    0% {  right: -70%; }
+    100% {  right: 0; }
+  }
+
 }
 
 .expansion-window__container {
