--- a/src/templates/components/feed-tile.hbs
+++ b/src/templates/components/feed-tile.hbs
@@ -26,9 +26,9 @@
         </span>
     </div>
 
-    <div class="link__status-icon link__reddit">
-        <a target="_blank" href="{{feed.redditLink}}">r</a>
-    </div>
+    <a class="link__status-icon link__reddit" target="_blank" href="{{feed.redditLink}}">
+        <span>r</span>
+    </a>
 
     <div class="link__status-icon link__enter" {{action "enter"}}>
         <span>&#10132;</span>
