--- a/src/styles/scss/components/_feed-tile.scss
+++ b/src/styles/scss/components/_feed-tile.scss
@@ -30,7 +30,7 @@ $status-item-size: 60px;
   @include flex(0 0 $status-item-size);
   cursor: pointer;
 
-  span, a {
+  span {
     font-size: 2em;
   }
 
@@ -63,12 +63,12 @@ $status-item-size: 60px;
 
 .link__save {
   background-color: rgb(142, 142, 65);
-  span { color: gold !important; }
+  span { color: gold; }
 
   &:hover {}
 
   &.is-pending {
-    span { color: whitesmoke !important; }
+    span { color: whitesmoke; }
   }
 
   &.is-on {}
@@ -77,7 +77,7 @@ $status-item-size: 60px;
 
 .link__reddit {
   background-color: rgb(87, 87, 87);
-  a { color: white; }
+  span { color: white; }
 }
 
 
