--- a/src/styles/scss/components/_feed-tile.scss
+++ b/src/styles/scss/components/_feed-tile.scss
@@ -1,5 +1,35 @@
 @import "compass";
 
+.subreddit__grid-tile {
+  @include box-shadow(0px 0px 5px 2px rgba(0, 0, 0, 0.5));
+  overflow: hidden;
+  width: 400px;
+  background-color: #3F3D3F;
+
+  img {
+    display: block;
+    width: 100%;
+  }
+
+}
+
+.grid-tile__title-bar {
+  font-size: 1.2em;
+  line-height: 1.4em;
+  font-weight: bold;
+}
+
+.feed-tile__info {
+  font-family: "open sans";
+  padding: 0.7em;
+
+  a, span {
+    color: #ADADAD;
+    display: block;
+  }
+
+}
+
 $status-item-size: 60px;
 
 .feed-tile__status-bar {
@@ -75,7 +105,6 @@ $status-item-size: 60px;
 
 .link__save {
   background-color: #B6B67F;
-//  span { color: rgb(249, 255, 0); }
 
   &:hover {
     background-color: #ffffff;
